# taskspace-api

./: docker-compose.yml  main.py  pyproject.toml
app/: models.py  schemas.py
app/api/: deps.py
app/core/: config.py  db.py  security.py
app/models/: tenant.py  user.py  workspace.py
app/repositories/implementations/: UserRepositoryDB.py  organization_repository_db.py  user_repository_db.py
app/repositories/interfaces/: organization_repository.py  user_repository.py
app/services/: organization_service.py  user_service.py
migrations/: env.py
migrations/versions/: 03b80c6d6472_rename_tenant_to_organization.py  46e9a700582f_first_migration.py  a328b489c6c5_feat_db_migrations_create_role_.py  a7932821b077_mig_remove_rbac_tables_in_favor_of_code_.py
