[project]
name = "taskspace-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.121.2",
    "psycopg[binary]>=3.2.13",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.27",
]
